--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -2,13 +2,11 @@ name: CI Dev Deployment
 
 on:
   push:
-    branches: [ main ]  # 當你推送到 main 分支時自動觸發
+    branches: [ main, master ]  # 同時支援 main / master
 
-# 建立 Release 需要內容寫入權限
 permissions:
   contents: write
 
-# 並行控制（避免同一分支的釋出互相踩到）
 concurrency:
   group: release-${{ github.ref }}
   cancel-in-progress: false
@@ -17,22 +15,25 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: 取出程式碼
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: 安裝 Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 20
-          cache: npm
+          node-version: 20     # 不使用 cache
 
-      - name: 安裝相依並建置
+      - name: Install & Build
         run: |
-          npm ci
+          if [ -f package-lock.json ]; then
+            npm ci
+          else
+            npm install
+          fi
           npm run build --if-present
           zip -r build.zip .
 
-      - name: 上傳建置產物
+      - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
           name: build-artifact
@@ -41,22 +42,19 @@ jobs:
   deploy-dev:
     needs: build
     runs-on: ubuntu-latest
-    environment: dev   # 指定部署到 dev 環境，會套用 dev 的環境變數
+    environment: dev
     steps:
-      - name: 下載建置產物
+      - name: Download Artifact
         uses: actions/download-artifact@v4
         with:
           name: build-artifact
 
-      - name: 建立 Dev 釋出（Release）
+      - name: Release Dev Build
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}   # 由 Actions 自動提供
-          TAG: ${{ vars.BUILD_TAG }}                 # 取自 dev 環境的 BUILD_TAG
-          NOTE: ${{ vars.RELEASE_NOTE }}             # 取自 dev 環境的 RELEASE_NOTE
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TAG: ${{ vars.BUILD_TAG }}
+          NOTE: ${{ vars.RELEASE_NOTE }}
         run: |
-          # 若標籤已存在，先移除，避免建立 Release 失敗
           gh release delete "$TAG" -y || true
           gh api -X DELETE repos/${{ github.repository }}/git/refs/tags/$TAG || true
-
-          # 建立新的 Release，附上建置檔
           gh release create "$TAG" build.zip --notes "$NOTE"
