--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,10 +1,10 @@
 name: CI/CD Deployment Pipeline
 
 on:
-  # 以人工按鈕觸發，避免每次推送都部署到正式環境
   workflow_dispatch: {}
+  push:
+    branches: [ main, master ]
 
-# 建立 Release 與 Deployment 需要的權限
 permissions:
   contents: write
   deployments: write
@@ -17,22 +17,25 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: 取出程式碼
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: 安裝 Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
 
-      - name: 安裝相依並建置
+      - name: Install & Build
         run: |
-          npm ci
+          if [ -f package-lock.json ]; then
+            npm ci
+          else
+            npm install
+          fi
           npm run build --if-present
           zip -r build.zip .
 
-      - name: 上傳建置產物
+      - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
           name: build-artifact
@@ -43,15 +46,15 @@ jobs:
     runs-on: ubuntu-latest
     environment: staging
     steps:
-      - name: 下載建置產物
+      - name: Download Artifact
         uses: actions/download-artifact@v4
         with:
           name: build-artifact
 
-      - name: 建立 Staging 釋出
+      - name: Release Staging
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TAG: ${{ vars.BUILD_TAG }}        # 取自 staging 環境
+          TAG: ${{ vars.BUILD_TAG }}
           NOTE: ${{ vars.RELEASE_NOTE }}
         run: |
           gh release delete "$TAG" -y || true
@@ -61,17 +64,17 @@ jobs:
   deploy-production:
     needs: deploy-staging
     runs-on: ubuntu-latest
-    environment: production   # 這裡會觸發 production 的保護規則（需要審核）
+    environment: production   # 這裡會卡審核（Required reviewers）
     steps:
-      - name: 下載建置產物
+      - name: Download Artifact
         uses: actions/download-artifact@v4
         with:
           name: build-artifact
 
-      - name: 建立 Production 釋出
+      - name: Release Production
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TAG: ${{ vars.BUILD_TAG }}        # 取自 production 環境
+          TAG: ${{ vars.BUILD_TAG }}
           NOTE: ${{ vars.RELEASE_NOTE }}
         run: |
           gh release delete "$TAG" -y || true
