--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,14 +25,15 @@ jobs:
         with:
           node-version: 20
 
-      - name: Install & Build
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
+
+      - name: Install & Build (Bun-first with fallbacks)
         run: |
-          if [ -f package-lock.json ]; then
-            npm ci
-          else
-            npm install
-          fi
-          npm run build --if-present
+          bun install
+          npm run build || bun run build || bunx @vercel/ncc build src/index.js --license licenses.txt
           zip -r build.zip .
 
       - name: Upload Artifact
