--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -41,22 +41,26 @@ jobs:
           name: build-artifact
           path: build.zip
 
-  deploy-dev:
-    needs: build
-    runs-on: ubuntu-latest
-    environment: dev
-    steps:
-      - name: Download Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: build-artifact
+deploy-dev:
+  needs: build
+  runs-on: ubuntu-latest
+  environment: dev
+  steps:
+    - name: Checkout
+      uses: actions/checkout@v4
 
-      - name: Release Dev Build
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TAG: ${{ vars.BUILD_TAG }}
-          NOTE: ${{ vars.RELEASE_NOTE }}
-        run: |
-          gh release delete "$TAG" -y || true
-          gh api -X DELETE repos/${{ github.repository }}/git/refs/tags/$TAG || true
-          gh release create "$TAG" build.zip --notes "$NOTE"
+    - name: Download Artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: build-artifact
+
+    - name: Release Dev Build
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        TAG: ${{ vars.BUILD_TAG }}
+        NOTE: ${{ vars.RELEASE_NOTE }}
+      run: |
+        gh release delete "$TAG" -y || true
+        gh api -X DELETE repos/${{ github.repository }}/git/refs/tags/$TAG || true
+        gh release create "$TAG" build.zip --notes "$NOTE"
+
