--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -2,7 +2,7 @@ name: CI Staging Deployment
 
 on:
   push:
-    branches: [ main, master ]  # 支援 main / master
+    branches: [ main, master ]
 
 permissions:
   contents: write
@@ -47,7 +47,7 @@ jobs:
     environment: staging
 
     steps:
-      - name: 📥 Checkout repository (for gh CLI to work)
+      - name: 📥 Checkout repository (for gh CLI)
         uses: actions/checkout@v4
 
       - name: 📥 Download Artifact
@@ -60,24 +60,28 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TAG: ${{ vars.BUILD_TAG }}     # 從 staging 環境讀取
+          TAG: ${{ vars.BUILD_TAG }}
         run: |
-          # 若 release 存在才刪
+          # 刪 release（如果存在）
           if gh release view "$TAG" --repo "$GITHUB_REPOSITORY" >/dev/null 2>&1; then
             gh release delete "$TAG" -y --repo "$GITHUB_REPOSITORY"
+          else
+            echo "Release $TAG 不存在，跳過刪除"
           fi
 
-          # 若 tag 存在才刪
+          # 刪 tag（如果存在）
           if gh api -H "Accept: application/vnd.github+json" \
               "repos/$GITHUB_REPOSITORY/git/refs/tags/$TAG" >/dev/null 2>&1; then
             gh api -X DELETE "repos/$GITHUB_REPOSITORY/git/refs/tags/$TAG"
+          else
+            echo "Tag $TAG 不存在，跳過刪除"
           fi
 
       - name: 🚀 Create Staging Release
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TAG: ${{ vars.BUILD_TAG }}         # e.g. staging-v1.0
-          NOTE: ${{ vars.RELEASE_NOTE }}     # e.g. Staging build for pre-production
+          TAG: ${{ vars.BUILD_TAG }}
+          NOTE: ${{ vars.RELEASE_NOTE }}
         run: |
           gh release create "$TAG" build.zip --notes "$NOTE" --repo "$GITHUB_REPOSITORY"
