--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,6 +27,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: npm
 
       - name: Install dependencies
         run: npm install
@@ -45,8 +46,10 @@ jobs:
       - name: Upload bumped package metadata
         uses: actions/upload-artifact@v4
         with:
-          name: bumped-package-json
-          path: package.json
+          name: bumped-package
+          path: |
+            package.json
+            package-lock.json
 
   build:
     needs: prepare-version
@@ -58,18 +61,20 @@ jobs:
       - name: Download bumped package metadata
         uses: actions/download-artifact@v4
         with:
-          name: bumped-package-json
+          name: bumped-package
           path: bumped-package
 
       - name: Apply bumped package metadata
         run: |
           mv bumped-package/package.json package.json
+          mv bumped-package/package-lock.json package-lock.json
           rm -rf bumped-package
 
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: npm
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
