--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
     "version:bump": "node scripts/bump-version.js",
     "version:notes": "node scripts/generate-release-notes.js"
   },
+    "dependencies": {
+    "@actions/core": "^1.11.1",
+    "@actions/github": "^6.0.1",
+    "axios": "^1.11.0",
+    "yaml": "^2.8.1"
+  },
   "devDependencies": {
     "eslint": "^9.6.0",
     "eslint-config-prettier": "^9.1.0",
