--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,61 +14,11 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  prepare-version:
-    runs-on: ubuntu-latest
-    outputs:
-      next_tag: ${{ steps.bump.outputs.next_tag }}
-      release_notes: ${{ steps.notes.outputs.notes }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: npm
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Bump semantic version
-        id: bump
-        run: npm run version:bump
-
-      - name: Generate release notes
-        id: notes
-        env:
-          RELEASE_ENV: base
-          RELEASE_VERSION: ${{ steps.bump.outputs.next_tag }}
-        run: npm run version:notes
-
-      - name: Upload bumped package metadata
-        uses: actions/upload-artifact@v4
-        with:
-          name: bumped-package
-          path: |
-            package.json
-            package-lock.json
-
   build:
-    needs: prepare-version
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Download bumped package metadata
-        uses: actions/download-artifact@v4
-        with:
-          name: bumped-package
-          path: bumped-package
-
-      - name: Apply bumped package metadata
-        run: |
-          mv bumped-package/package.json package.json
-          mv bumped-package/package-lock.json package-lock.json
-          rm -rf bumped-package
 
       - name: Setup Node
         uses: actions/setup-node@v4
@@ -99,7 +49,6 @@ jobs:
   deploy-dev:
     needs:
       - build
-      - prepare-version
     runs-on: ubuntu-latest
     environment: dev
     steps:
@@ -112,8 +61,8 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TAG: ${{ needs.prepare-version.outputs.next_tag }}
-          NOTE: ${{ needs.prepare-version.outputs.release_notes }}
+          TAG: ${{ vars.BUILD_TAG }}
+          NOTE: ${{ vars.RELEASE_NOTE }}
         run: |
           TAG_WITH_ENV="${TAG}-dev"
           NOTE_WITH_ENV="${NOTE}"$'\n'"Environment: dev"
@@ -124,7 +73,6 @@ jobs:
   deploy-staging:
     needs:
       - deploy-dev
-      - prepare-version
     runs-on: ubuntu-latest
     environment: staging
     steps:
@@ -137,8 +85,8 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TAG: ${{ needs.prepare-version.outputs.next_tag }}
-          NOTE: ${{ needs.prepare-version.outputs.release_notes }}
+          TAG: ${{ vars.BUILD_TAG }}
+          NOTE: ${{ vars.RELEASE_NOTE }}
         run: |
           TAG_WITH_ENV="${TAG}-staging"
           NOTE_WITH_ENV="${NOTE}"$'\n'"Environment: staging"
@@ -146,11 +94,9 @@ jobs:
           gh api -X DELETE "repos/$GITHUB_REPOSITORY/git/refs/tags/$TAG_WITH_ENV" || true
           gh release create "$TAG_WITH_ENV" build.zip --notes "$NOTE_WITH_ENV" --repo "$GITHUB_REPOSITORY"
 
-
   deploy-production:
     needs:
       - deploy-staging
-      - prepare-version
     runs-on: ubuntu-latest
     environment: production
     steps:
@@ -163,8 +109,8 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TAG: ${{ needs.prepare-version.outputs.next_tag }}
-          NOTE: ${{ needs.prepare-version.outputs.release_notes }}
+          TAG: ${{ vars.BUILD_TAG }}
+          NOTE: ${{ vars.RELEASE_NOTE }}
         run: |
           TAG_WITH_ENV="${TAG}"
           NOTE_WITH_ENV="${NOTE}"$'\n'"Environment: production"
