--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -54,23 +54,20 @@ jobs:
         with:
           name: build-artifact
 
-      - name: 🚿 Cleanup existing release & tag (idempotent)
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          RAW_TAG: ${{ vars.BUILD_TAG }}
-        run: |
-          TAG="${RAW_TAG}-dev"
-          if gh release view "$TAG" --repo "$GITHUB_REPOSITORY" >/dev/null 2>&1; then
-            gh release delete "$TAG" -y --repo "$GITHUB_REPOSITORY"
-          fi
-          gh api -X DELETE "repos/$GITHUB_REPOSITORY/git/refs/tags/$TAG" || true
-
       - name: 🚀 Create Dev Release
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           RAW_TAG: ${{ vars.BUILD_TAG }}
+          NOTE: ${{ vars.RELEASE_NOTE }}
+        run: |
+          TAG="${RAW_TAG}-dev"
+          if gh release view "$TAG" --repo "$GITHUB_REPOSITORY" >/dev/null 2>&1; then
+            gh release upload "$TAG" build.zip --clobber --repo "$GITHUB_REPOSITORY"
+            gh release edit "$TAG" --notes "$NOTE"$'\n''Environment: dev' --repo "$GITHUB_REPOSITORY"
+          else
+            gh release create "$TAG" build.zip --notes "$NOTE"$'\n''Environment: dev' --repo "$GITHUB_REPOSITORY"
+          fi
           NOTE: ${{ vars.RELEASE_NOTE }}
         run: |
           TAG="${RAW_TAG}-dev"
