--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -64,14 +64,21 @@ jobs:
           TAG: ${{ vars.BUILD_TAG }}
           NOTE: ${{ vars.RELEASE_NOTE }}
         run: |
+        run: |
           TAG_WITH_ENV="${TAG}-dev"
           NOTE_WITH_ENV="${NOTE}"$'\n'"Environment: dev"
+
           if gh release view "$TAG_WITH_ENV" --repo "$GITHUB_REPOSITORY" >/dev/null 2>&1; then
             gh release upload "$TAG_WITH_ENV" build.zip --clobber --repo "$GITHUB_REPOSITORY"
             gh release edit "$TAG_WITH_ENV" --notes "$NOTE_WITH_ENV" --repo "$GITHUB_REPOSITORY"
-          else
-            gh release create "$TAG_WITH_ENV" build.zip --notes "$NOTE_WITH_ENV" --repo "$GITHUB_REPOSITORY"
+            exit 0
           fi
+
+          if gh api --method GET "repos/$GITHUB_REPOSITORY/git/refs/tags/$TAG_WITH_ENV" >/dev/null 2>&1; then
+            gh api --method DELETE "repos/$GITHUB_REPOSITORY/git/refs/tags/$TAG_WITH_ENV"
+          fi
+
+          gh release create "$TAG_WITH_ENV" build.zip --notes "$NOTE_WITH_ENV" --repo "$GITHUB_REPOSITORY"
   
   deploy-staging:
     needs:
@@ -93,12 +100,18 @@ jobs:
         run: |
           TAG_WITH_ENV="${TAG}-staging"
           NOTE_WITH_ENV="${NOTE}"$'\n'"Environment: staging"
+
           if gh release view "$TAG_WITH_ENV" --repo "$GITHUB_REPOSITORY" >/dev/null 2>&1; then
             gh release upload "$TAG_WITH_ENV" build.zip --clobber --repo "$GITHUB_REPOSITORY"
             gh release edit "$TAG_WITH_ENV" --notes "$NOTE_WITH_ENV" --repo "$GITHUB_REPOSITORY"
-          else
-            gh release create "$TAG_WITH_ENV" build.zip --notes "$NOTE_WITH_ENV" --repo "$GITHUB_REPOSITORY"
+            exit 0
           fi
+
+          if gh api --method GET "repos/$GITHUB_REPOSITORY/git/refs/tags/$TAG_WITH_ENV" >/dev/null 2>&1; then
+            gh api --method DELETE "repos/$GITHUB_REPOSITORY/git/refs/tags/$TAG_WITH_ENV"
+          fi
+
+          gh release create "$TAG_WITH_ENV" build.zip --notes "$NOTE_WITH_ENV" --repo "$GITHUB_REPOSITORY"
 
   deploy-production:
     needs:
@@ -120,9 +133,15 @@ jobs:
         run: |
           TAG_WITH_ENV="${TAG}"
           NOTE_WITH_ENV="${NOTE}"$'\n'"Environment: production"
+
           if gh release view "$TAG_WITH_ENV" --repo "$GITHUB_REPOSITORY" >/dev/null 2>&1; then
             gh release upload "$TAG_WITH_ENV" build.zip --clobber --repo "$GITHUB_REPOSITORY"
             gh release edit "$TAG_WITH_ENV" --notes "$NOTE_WITH_ENV" --repo "$GITHUB_REPOSITORY"
-          else
-            gh release create "$TAG_WITH_ENV" build.zip --notes "$NOTE_WITH_ENV" --repo "$GITHUB_REPOSITORY"
+            exit 0
           fi
+
+          if gh api --method GET "repos/$GITHUB_REPOSITORY/git/refs/tags/$TAG_WITH_ENV" >/dev/null 2>&1; then
+            gh api --method DELETE "repos/$GITHUB_REPOSITORY/git/refs/tags/$TAG_WITH_ENV"
+          fi
+
+          gh release create "$TAG_WITH_ENV" build.zip --notes "$NOTE_WITH_ENV" --repo "$GITHUB_REPOSITORY"
