--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -54,15 +54,16 @@ jobs:
         with:
           name: build-artifact
 
-      - name: 🚀 Create or Update Dev Release
+          - name: 🚀 Create or Update Dev Release
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          RAW_TAG: ${{ vars.BUILD_TAG }}
-          NOTE: ${{ vars.RELEASE_NOTE }}
+          BASE_TAG: ${{ vars.BUILD_TAG }}
+          RELEASE_NOTE: ${{ vars.RELEASE_NOTE }}
         run: |
-          TAG="${RAW_TAG}-dev"
-          NOTE_WITH_ENV="$NOTE"$'\n'"Environment: dev"
+          set -euo pipefail
+
+          TAG="${BASE_TAG}-dev"
+          NOTE_WITH_ENV="${RELEASE_NOTE}"$'\n'"Environment: dev"
 
           if gh release view "$TAG" --repo "$GITHUB_REPOSITORY" >/dev/null 2>&1; then
             gh release upload "$TAG" build.zip --clobber --repo "$GITHUB_REPOSITORY"
