--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -54,20 +54,22 @@ jobs:
         with:
           name: build-artifact
 
-          - name: 🚀 Create or Update Dev Release
+      - name: 🚀 Create or Update Dev Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BASE_TAG: ${{ vars.BUILD_TAG }}
           RELEASE_NOTE: ${{ vars.RELEASE_NOTE }}
+          RELEASE_SUFFIX: "-dev"
+          ENV_LABEL: dev
         run: |
           set -euo pipefail
 
-          TAG="${BASE_TAG}-dev"
-          NOTE_WITH_ENV="${RELEASE_NOTE}"$'\n'"Environment: dev"
+          TAG="${BASE_TAG}${RELEASE_SUFFIX}"
+          NOTE="${RELEASE_NOTE}"$'\n'"Environment: ${ENV_LABEL}"
 
           if gh release view "$TAG" --repo "$GITHUB_REPOSITORY" >/dev/null 2>&1; then
             gh release upload "$TAG" build.zip --clobber --repo "$GITHUB_REPOSITORY"
-            gh release edit "$TAG" --notes "$NOTE_WITH_ENV" --repo "$GITHUB_REPOSITORY"
+            gh release edit "$TAG" --notes "$NOTE" --repo "$GITHUB_REPOSITORY"
             exit 0
           fi
 
@@ -75,4 +77,4 @@ jobs:
             gh api --method DELETE "repos/$GITHUB_REPOSITORY/git/refs/tags/$TAG"
           fi
 
-          gh release create "$TAG" build.zip --notes "$NOTE_WITH_ENV" --repo "$GITHUB_REPOSITORY"
+          gh release create "$TAG" build.zip --notes "$NOTE" --repo "$GITHUB_REPOSITORY"
