--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,15 +25,7 @@ jobs:
         with:
           node-version: 20
           cache: npm
-
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v2
-        with:
-          bun-version: latest
-          
-      - name: Install dependencies
-        run: npm install
-
+@@ -38,83 +37,119 @@ jobs:
       - name: Install & Build (Bun-first with fallbacks)
         run: |
           bun install
@@ -59,26 +51,28 @@ jobs:
 
       - name: Release Dev
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TAG: ${{ vars.BUILD_TAG }}
-          NOTE: ${{ vars.RELEASE_NOTE }}
+          BASE_TAG: ${{ vars.BUILD_TAG }}
+          RELEASE_NOTE: ${{ vars.RELEASE_NOTE }}
+          RELEASE_SUFFIX: "-dev"
+          ENV_LABEL: dev
         run: |
-        run: |
-          TAG_WITH_ENV="${TAG}-dev"
-          NOTE_WITH_ENV="${NOTE}"$'\n'"Environment: dev"
+          set -euo pipefail
 
-          if gh release view "$TAG_WITH_ENV" --repo "$GITHUB_REPOSITORY" >/dev/null 2>&1; then
-            gh release upload "$TAG_WITH_ENV" build.zip --clobber --repo "$GITHUB_REPOSITORY"
-            gh release edit "$TAG_WITH_ENV" --notes "$NOTE_WITH_ENV" --repo "$GITHUB_REPOSITORY"
+          TAG="${BASE_TAG}${RELEASE_SUFFIX}"
+          NOTE="${RELEASE_NOTE}"$'\n'"Environment: ${ENV_LABEL}"
+
+          if gh release view "$TAG" --repo "$GITHUB_REPOSITORY" >/dev/null 2>&1; then
+            gh release upload "$TAG" build.zip --clobber --repo "$GITHUB_REPOSITORY"
+            gh release edit "$TAG" --notes "$NOTE" --repo "$GITHUB_REPOSITORY"
             exit 0
           fi
 
-          if gh api --method GET "repos/$GITHUB_REPOSITORY/git/refs/tags/$TAG_WITH_ENV" >/dev/null 2>&1; then
-            gh api --method DELETE "repos/$GITHUB_REPOSITORY/git/refs/tags/$TAG_WITH_ENV"
+          if gh api --method GET "repos/$GITHUB_REPOSITORY/git/refs/tags/$TAG" >/dev/null 2>&1; then
+            gh api --method DELETE "repos/$GITHUB_REPOSITORY/git/refs/tags/$TAG"
           fi
 
-          gh release create "$TAG_WITH_ENV" build.zip --notes "$NOTE_WITH_ENV" --repo "$GITHUB_REPOSITORY"
+          gh release create "$TAG" build.zip --notes "$NOTE" --repo "$GITHUB_REPOSITORY"
   
   deploy-staging:
     needs:
@@ -93,25 +87,28 @@ jobs:
 
       - name: Release Staging
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TAG: ${{ vars.BUILD_TAG }}
-          NOTE: ${{ vars.RELEASE_NOTE }}
+          BASE_TAG: ${{ vars.BUILD_TAG }}
+          RELEASE_NOTE: ${{ vars.RELEASE_NOTE }}
+          RELEASE_SUFFIX: "-staging"
+          ENV_LABEL: staging
         run: |
-          TAG_WITH_ENV="${TAG}-staging"
-          NOTE_WITH_ENV="${NOTE}"$'\n'"Environment: staging"
+          set -euo pipefail
 
-          if gh release view "$TAG_WITH_ENV" --repo "$GITHUB_REPOSITORY" >/dev/null 2>&1; then
-            gh release upload "$TAG_WITH_ENV" build.zip --clobber --repo "$GITHUB_REPOSITORY"
-            gh release edit "$TAG_WITH_ENV" --notes "$NOTE_WITH_ENV" --repo "$GITHUB_REPOSITORY"
+          TAG="${BASE_TAG}${RELEASE_SUFFIX}"
+          NOTE="${RELEASE_NOTE}"$'\n'"Environment: ${ENV_LABEL}"
+
+          if gh release view "$TAG" --repo "$GITHUB_REPOSITORY" >/dev/null 2>&1; then
+            gh release upload "$TAG" build.zip --clobber --repo "$GITHUB_REPOSITORY"
+            gh release edit "$TAG" --notes "$NOTE" --repo "$GITHUB_REPOSITORY"
             exit 0
           fi
 
-          if gh api --method GET "repos/$GITHUB_REPOSITORY/git/refs/tags/$TAG_WITH_ENV" >/dev/null 2>&1; then
-            gh api --method DELETE "repos/$GITHUB_REPOSITORY/git/refs/tags/$TAG_WITH_ENV"
+          if gh api --method GET "repos/$GITHUB_REPOSITORY/git/refs/tags/$TAG" >/dev/null 2>&1; then
+            gh api --method DELETE "repos/$GITHUB_REPOSITORY/git/refs/tags/$TAG"
           fi
 
-          gh release create "$TAG_WITH_ENV" build.zip --notes "$NOTE_WITH_ENV" --repo "$GITHUB_REPOSITORY"
+          gh release create "$TAG" build.zip --notes "$NOTE" --repo "$GITHUB_REPOSITORY"
 
   deploy-production:
     needs:
@@ -126,22 +123,25 @@ jobs:
 
       - name: Release Production
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TAG: ${{ vars.BUILD_TAG }}
-          NOTE: ${{ vars.RELEASE_NOTE }}
+          BASE_TAG: ${{ vars.BUILD_TAG }}
+          RELEASE_NOTE: ${{ vars.RELEASE_NOTE }}
+          RELEASE_SUFFIX: ""
+          ENV_LABEL: production
         run: |
-          TAG_WITH_ENV="${TAG}"
-          NOTE_WITH_ENV="${NOTE}"$'\n'"Environment: production"
+          set -euo pipefail
 
-          if gh release view "$TAG_WITH_ENV" --repo "$GITHUB_REPOSITORY" >/dev/null 2>&1; then
-            gh release upload "$TAG_WITH_ENV" build.zip --clobber --repo "$GITHUB_REPOSITORY"
-            gh release edit "$TAG_WITH_ENV" --notes "$NOTE_WITH_ENV" --repo "$GITHUB_REPOSITORY"
+          TAG="${BASE_TAG}${RELEASE_SUFFIX}"
+          NOTE="${RELEASE_NOTE}"$'\n'"Environment: ${ENV_LABEL}"
+
+          if gh release view "$TAG" --repo "$GITHUB_REPOSITORY" >/dev/null 2>&1; then
+            gh release upload "$TAG" build.zip --clobber --repo "$GITHUB_REPOSITORY"
+            gh release edit "$TAG" --notes "$NOTE" --repo "$GITHUB_REPOSITORY"
             exit 0
           fi
 
-          if gh api --method GET "repos/$GITHUB_REPOSITORY/git/refs/tags/$TAG_WITH_ENV" >/dev/null 2>&1; then
-            gh api --method DELETE "repos/$GITHUB_REPOSITORY/git/refs/tags/$TAG_WITH_ENV"
+          if gh api --method GET "repos/$GITHUB_REPOSITORY/git/refs/tags/$TAG" >/dev/null 2>&1; then
+            gh api --method DELETE "repos/$GITHUB_REPOSITORY/git/refs/tags/$TAG"
           fi
 
-          gh release create "$TAG_WITH_ENV" build.zip --notes "$NOTE_WITH_ENV" --repo "$GITHUB_REPOSITORY"
+          gh release create "$TAG" build.zip --notes "$NOTE" --repo "$GITHUB_REPOSITORY"
