--- a/.github/workflows/cicd-pipeline.yml
+++ b/.github/workflows/cicd-pipeline.yml
@@ -1,4 +1,4 @@
-name: CI/CD Deployment Pipeline
+name: CI/CD Deployment Pipeline (O-grade)
 
 on:
   workflow_dispatch: {}
@@ -8,14 +8,19 @@ permissions:
   deployments: write
 
 jobs:
-  build:
+  build_and_test:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        node-version: [18, 20]   # 矩陣測試
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with: { node-version: 20 }
 
-      # 跟 dev 一樣的「lockfile-safe」安裝策略（簡化版）
+      - uses: actions/setup-node@v4
+        with: { node-version: ${{ matrix['node-version'] }} }
+
+      # lockfile-safe：有 lock 用 ci；沒有就 install
       - name: Install deps (ci with fallback)
         run: |
           if [ -f package.json ]; then
@@ -28,6 +33,12 @@ jobs:
             echo "No package.json, skip"
           fi
 
+      - name: Lint
+        run: npm run lint --if-present
+
+      - name: Test
+        run: npm test --if-present
+
       - name: Build
         run: |
           if [ -f package.json ]; then
@@ -35,48 +46,93 @@ jobs:
           fi
 
       - name: Archive
-        run: zip -r build.zip . -x ".git/*" "node_modules/*"
+        run: zip -r build-${{ matrix['node-version'] }}.zip . -x ".git/*" "node_modules/*"
 
-      - name: Upload Artifact
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
-        with: { name: build-artifact, path: build.zip }
+        with:
+          name: build-artifacts
+          path: build-*.zip
+
+  versioning:
+    needs: build_and_test
+    runs-on: ubuntu-latest
+    outputs:
+      TAG_STAGING: ${{ steps.mk.outputs.staging }}
+      TAG_PROD: ${{ steps.mk.outputs.prod }}
+    steps:
+      - uses: actions/checkout@v4
+      - id: mk
+        run: |
+          if [ -f package.json ]; then
+            base=$(node -p "require('./package.json').version || '0.1.0'")
+          else
+            base="0.1.0"
+          fi
+          runno="${GITHUB_RUN_NUMBER}"
+          echo "staging=staging-${base}+build-${runno}" >> "$GITHUB_OUTPUT"
+          echo "prod=prod-${base}+build-${runno}" >> "$GITHUB_OUTPUT"
 
   deploy-staging:
-    needs: build
+    needs: [versioning]
     runs-on: ubuntu-latest
     environment: staging
     steps:
       - uses: actions/download-artifact@v4
-        with: { name: build-artifact }
+        with: { name: build-artifacts }
 
-      - name: Release to Staging (idempotent, repo-scoped)
+      - name: Release to Staging (idempotent)
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_REPO: ${{ github.repository }}
-          TAG: ${{ vars.BUILD_TAG }}         # staging-v1.0
-          NOTE: ${{ vars.RELEASE_NOTE }}     # Testing pre-production release
+          TAG: ${{ needs.versioning.outputs.TAG_STAGING }}
+          NOTE: ${{ vars.RELEASE_NOTE }}
         run: |
           gh release view "$TAG" --repo "$GH_REPO" >/dev/null 2>&1 \
             && gh release delete "$TAG" --cleanup-tag --yes --repo "$GH_REPO" \
             || echo "No existing release for $TAG"
-          gh release create "$TAG" build.zip --notes "${NOTE:-'Staging release'}" --repo "$GH_REPO"
+          gh release create "$TAG" build-*.zip --notes "${NOTE:-'Testing pre-production release'}" --repo "$GH_REPO"
+
+      - name: Notify Slack (staging)
+        if: ${{ success() && secrets.SLACK_WEBHOOK_URL != '' }}
+        run: |
+          curl -X POST -H 'Content-type: application/json' \
+            --data "{\"text\":\"🟡 Staging released: ${{ needs.versioning.outputs.TAG_STAGING }}\"}" \
+            "${{ secrets.SLACK_WEBHOOK_URL }}"
 
   deploy-production:
-    needs: deploy-staging
+    needs: [deploy-staging, versioning]
     runs-on: ubuntu-latest
-    environment: production   # 這裡會觸發 reviewers 審核
+    environment: production   # 這裡會等待 Reviewer 批准
     steps:
       - uses: actions/download-artifact@v4
-        with: { name: build-artifact }
+        with: { name: build-artifacts }
 
       - name: Release to Production (awaits approval)
+        id: release
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_REPO: ${{ github.repository }}
-          TAG: ${{ vars.BUILD_TAG }}         # prod-v1.0
-          NOTE: ${{ vars.RELEASE_NOTE }}     # Production release
+          TAG: ${{ needs.versioning.outputs.TAG_PROD }}
+          NOTE: ${{ vars.RELEASE_NOTE }}
         run: |
           gh release view "$TAG" --repo "$GH_REPO" >/dev/null 2>&1 \
             && gh release delete "$TAG" --cleanup-tag --yes --repo "$GH_REPO" \
             || echo "No existing release for $TAG"
-          gh release create "$TAG" build.zip --notes "${NOTE:-'Production release'}" --repo "$GH_REPO"
+          gh release create "$TAG" build-*.zip --notes "${NOTE:-'Production release'}" --repo "$GH_REPO"
+
+      - name: Notify Slack (prod)
+        if: ${{ success() && secrets.SLACK_WEBHOOK_URL != '' }}
+        run: |
+          curl -X POST -H 'Content-type: application/json' \
+            --data "{\"text\":\"✅ Production released: ${{ needs.versioning.outputs.TAG_PROD }}\"}" \
+            "${{ secrets.SLACK_WEBHOOK_URL }}"
+
+      - name: Rollback if failed (cleanup half-done releases)
+        if: ${{ failure() }}
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_REPO: ${{ github.repository }}
+          TAG_P: ${{ needs.versioning.outputs.TAG_PROD }}
+        run: |
+          gh release delete "$TAG_P" --cleanup-tag --yes --repo "$GH_REPO" || true
